=== HEAD

* Actually use RETURNING for deletes/updates on PostgreSQL 8.2-9.0 (jeremyevans)

* You can now require 'sequel/no_core_ext' to load Sequel without the core extensions (jeremyevans)

* The core extensions have now been made a real Sequel extension (still loaded by default) (jeremyevans)

* VirtualRow#` has been added for creating literal strings (jeremyevans)

* VirtualRow instances now have operator methods defined {+,-,*,/,&,|,~,>,<,>=,<=} (jeremyevans)

* Array#all_two_pairs? is now deprecated and will be removed after 3.34.0 is released (jeremyevans)

* All of Sequel's core extensions now have equivalent methods defined on the Sequel module (jeremyevans)

* Add Sequel.core_extensions? for checking if the core extensions are enabled (jeremyevans)

* Increase speed of Model#this by about 85% (jeremyevans)

* Increase speed of Model#delete and #destroy by about 75% for models with simple datasets (jeremyevans)

* Make nested_attributes plugin work when destroying/removing associated objects when strict_param_setting is true (r-stu31) (#455)

* Dataset#disable_insert_returning on PostgreSQL is now deprecated and will be removed after 3.34.0 is released (jeremyevans)

* Double speed of Model[pk] for models with simple datasets (most models) (jeremyevans)

* Support for ruby <1.8.7 and PostgreSQL <8.2 is now deprecated and will be removed after 3.34.0 is released (jeremyevans)

* Add select_remove extension which adds Dataset#select_remove for removing columns/expressions from a dataset selection (jeremyevans)

* Add static_cache plugin, for staticly caching all model instances, useful for model tables that don't change (jeremyevans)

* Add Model#freeze implementation to get a working frozen model object (jeremyevans)

* Add many_to_one_pk_lookup plugin, for using a simple primary key lookup for many_to_one associations (great with caching) (jeremyevans)

* Use bigint type instead of integer for Bignum generic type on SQLite (jeremyevans)
